--- a/templates/core/categoria_form.html
+++ b/templates/core/categoria_form.html
@@ -1,21 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ title }} - SGFP{% endblock %}
+{% block title %}Nova Categoria - SGFP{% endblock %}
+{% block page_icon %}<i class="fas fa-tags"></i>{% endblock %}
+{% block page_title %}Nova Categoria{% endblock %}
+{% block page_greeting %}Organize suas transações por categorias{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
-    <!-- Header -->
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
-            <h1 class="h3 mb-0">{{ title }}</h1>
-            <p class="text-muted">Organize suas transações por categorias</p>
-        </div>
-        <a href="{% url 'core:categoria_list' %}" class="btn btn-outline-secondary">
-            <i class="fas fa-arrow-left me-2"></i>Voltar
-        </a>
-    </div>
-
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="card shadow">
