--- a/templates/core/despesa_form.html
+++ b/templates/core/despesa_form.html
@@ -1,21 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}{{ title|default:'Editar Despesa' }} - SGFP{% endblock %}
+{% block title %}Nova Despesa - SGFP{% endblock %}
+{% block page_icon %}<i class="fas fa-arrow-down"></i>{% endblock %}
+{% block page_title %}Nova Despesa{% endblock %}
+{% block page_greeting %}Registre uma nova despesa{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
-    <!-- Header -->
-    <div class="d-flex justify-content-between align-items-center mb-4">
-        <div>
-            <h1 class="h3 mb-0">{{ title|default:'Editar Despesa' }}</h1>
-            <p class="text-muted">Registre uma nova despesa</p>
-        </div>
-        <a href="{% url 'core:despesa_list' %}" class="btn btn-outline-secondary">
-            <i class="fas fa-arrow-left me-2"></i>Voltar
-        </a>
-    </div>
-
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div class="card shadow">
