--- a/templates/core/receitas_list.html
+++ b/templates/core/receitas_list.html
@@ -25,12 +25,14 @@
                     <table class="table table-hover mb-0">
                         <thead class="sticky-top bg-white" style="z-index: 10;">
                             <tr>
-                                <th>Descrição</th>
-                                <th>Valor</th>
-                                <th>Recebimento</th>
-                                <th>Categoria</th>
-                                <th>Conta</th>
+                                {% with sort=request.GET.sort|default:'data' order=request.GET.order|default:'desc' %}
+                                <th><a href="?sort=descricao&order={% if sort == 'descricao' and order == 'asc' %}desc{% else %}asc{% endif %}{% if request.GET.per_page %}&per_page={{ request.GET.per_page }}{% endif %}">Descrição {% if sort == 'descricao' %}<i class="fas fa-sort-{% if order == 'asc' %}up{% else %}down{% endif %}"></i>{% endif %}</a></th>
+                                <th><a href="?sort=valor&order={% if sort == 'valor' and order == 'asc' %}desc{% else %}asc{% endif %}{% if request.GET.per_page %}&per_page={{ request.GET.per_page }}{% endif %}">Valor {% if sort == 'valor' %}<i class="fas fa-sort-{% if order == 'asc' %}up{% else %}down{% endif %}"></i>{% endif %}</a></th>
+                                <th><a href="?sort=data&order={% if sort == 'data' and order == 'asc' %}desc{% else %}asc{% endif %}{% if request.GET.per_page %}&per_page={{ request.GET.per_page }}{% endif %}">Recebimento {% if sort == 'data' %}<i class="fas fa-sort-{% if order == 'asc' %}up{% else %}down{% endif %}"></i>{% endif %}</a></th>
+                                <th><a href="?sort=categoria&order={% if sort == 'categoria' and order == 'asc' %}desc{% else %}asc{% endif %}{% if request.GET.per_page %}&per_page={{ request.GET.per_page }}{% endif %}">Categoria {% if sort == 'categoria' %}<i class="fas fa-sort-{% if order == 'asc' %}up{% else %}down{% endif %}"></i>{% endif %}</a></th>
+                                <th><a href="?sort=conta&order={% if sort == 'conta' and order == 'asc' %}desc{% else %}asc{% endif %}{% if request.GET.per_page %}&per_page={{ request.GET.per_page }}{% endif %}">Conta {% if sort == 'conta' %}<i class="fas fa-sort-{% if order == 'asc' %}up{% else %}down{% endif %}"></i>{% endif %}</a></th>
                                 <th class="acoes-col">Ações</th>
+                                {% endwith %}
                             </tr>
                         </thead>
                         <tbody>
